--- a/detail.html
+++ b/detail.html
@@ -8,10 +8,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="section-div"></div>
-    ciao sono il dettaglio
+    <div id="section-div">
+        <!-- <section class="section-style">
+            <img>
+            <div class="type-container">
+                
+            </div>
+            <div class="ability-container">
+                <details>
+                    <summary> Ability</summary>
+                    <p></p>
+                </details>
+            </div>
+        </section> -->
+    </div>
 </body>
-<script src="./services/poke-service.js"></script>
 <script src="./model/pokemon.js"></script>
+<script src="./services/poke-service.js"></script>
 <script src="./detail.js"></script>
 </html>
