--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
 
 </body>
+<script src="./model/pokemon.js"></script>
 <script src="./services/poke-service.js"></script>
 <script src="./app.js"></script>
 </html>
